Modify the title page a bit

--- a/Lab1/report_lab1.tex
+++ b/Lab1/report_lab1.tex
@@ -183,11 +183,11 @@ a4paper,     %% defines the paper size: a4paper (default), a5paper, letterpaper,
 %%% define the titlepage
 %%%
 
-% \subject{}   %% subject which appears above titlehead
-% \titlehead{} %% special heading for the titlepage
+ \subject{Image - Based Measurement Laboratory}   %% subject which appears above titlehead
+%\titlehead{} %% special heading for the titlepage
 
 %%% title
-\title{Image Based Measurement Laboratory\\\vspace{1cm}\Large{Lab1 - Uncalibrated Sensors}}
+\title{Lab1 - Uncalibrated Sensors}
 
 %%% author(s)
 \author{Filzmaier Josef (1030462) \and
